@@ -1,5 +1,10 @@
 $Id$
 Version 1.1.2 (?? ??? 2006)
+ - Fixed bug [ 1591892 ] disabling one 'root'-item the whole menue-items are
+ - Implemented RFE [ 1425299 ] location of the 'topmenu' below customize header
+ - Implemented RFE [ 1455565 ] Nice menu.
+ - Implemented RFE [ 1532277 ] First- and Lastname should be displayed instead of Username
+ - Implemented RFE [ 1588600 ] configurable menu
  - Fixed "bug" [ 1591243 ] perl-script 'check_translation.pl' and
    'update_translation.pl' doesn't work properly.
    Changed $show_missing = 0 back to $show_missing = 1.
